Some improvements to the tty2oled display update system

--- a/.SuperAttract/SuperAttractSystem.ini
+++ b/.SuperAttract/SuperAttractSystem.ini
@@ -63,10 +63,12 @@ function init_tty2oled_vars() {
 	# ======== TTY2OLED =======
 	declare -gl ttyenable=${ini_settings[ttyenable]:="no"}
 	declare -gi ttyupdate_pause=10
+	declare -g tty_currentinfo_file=${mrsamtmp}/tty_currentinfo
 	declare -gA tty_currentinfo=(
 		[core_pretty]=
 		[name]=
 		[core]=
+		[date]=0
 		[counter]=0
 		[name_scroll]=
 		[name_scroll_position]=0
