--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -47,6 +47,45 @@ ttyenable="No"
 # SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
 bgm="No"
 
+#-------- CORE PATHS --------
+# SAM finds all your files automatically, except for amiga
+amigapath="/media/fat/Games/Amiga"
+
+# --------- PATH FILTER ---------
+# If you would like to only play games from a subdirectory of your games folder, put it here
+# Example: 
+# arcadepathextra="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+#
+# Or use just a partial match to only play games from a certain category. Can be part of the path or filename.
+#
+# arcadepathextra="_Horizontal"
+# nespathextra="(Japan)"
+
+
+amigapathextra=""
+arcadepathextra="_Horizontal"
+atari2600pathextra=""
+atari5200pathextra=""
+atari7800pathextra=""
+atarilynxpathextra=""
+c64pathextra=""
+fdspathextra=""
+gbpathextra=""
+gbcpathextra=""
+gbapathextra=""
+genesispathextra=""
+ggpathextra=""
+megacdpathextra=""
+neogeopathextra=""
+nespathextra="Japan"
+s32xpathextra=""
+smspathextra=""
+snespathextra=""
+tgfx16pathextra=""
+tgfx16cdpathextra=""
+psxpathextra=""
+
+
 # FOLDER AND FILE EXCLUSION
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
@@ -64,10 +103,6 @@ exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
-
-#-------- CORE PATHS --------
-# SAM finds all your files automatically, except for amiga
-amigapath="/media/fat/Games/Amiga"
 
 
 # -------- TTY2OLED ADVCANCED SETTINGS -------
