--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -61,9 +61,8 @@ amigapath="/media/fat/Games/Amiga"
 # arcadepathextra="_Horizontal"
 # nespathextra="(Japan)"
 
-
 amigapathextra=""
-arcadepathextra="_Horizontal"
+arcadepathextra=""
 atari2600pathextra=""
 atari5200pathextra=""
 atari7800pathextra=""
@@ -77,7 +76,7 @@ genesispathextra=""
 ggpathextra=""
 megacdpathextra=""
 neogeopathextra=""
-nespathextra="Japan"
+nespathextra=""
 s32xpathextra=""
 smspathextra=""
 snespathextra=""
