--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -50,7 +50,8 @@ bgm="No"
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
 # Example: 
-# arcadepathfilter="_Horizontal"
+#
+# arcadepathfilter="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 #
 # Or use just a partial match to only play games from a certain category. Can be part of the path or filename.
 #
