--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,6 +25,7 @@ corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gb
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes (for global mute), No (to always play game sounds) or Core (to mute cores individually). 
+# Please use mute="core" for BGM support or use the menu to configure BGM automatically
 mute="No"
 
 # How do we exit SAM?
@@ -85,7 +86,7 @@ psxpathfilter=""
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( vgm readme hes-v3 unsupported sounds music palettes )
+exclude=( readme unsupported )
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 
