--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -16,10 +16,11 @@ samtimeout=60
 gametimer=180
 
 # Start SAM only from MiSTer main menu
+# If you change this to menuonly="No", SAM will always start after you put down the controller. 
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd psx
+# Valid options: amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx
 corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
