--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -115,12 +115,8 @@ norepeat="Yes"
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
 
-# Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
-usezip="Yes"
-
-# Show variables
 samtrace="No"
-
+samdebug="No"
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
 
