--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -105,9 +105,9 @@ listenjoy="Yes"
 # -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
 
+ttydevice="/dev/ttyUSB0"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
-ttyuseack="Yes"
 
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
