--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -89,6 +89,10 @@ psxpathfilter=""
 
 exclude=( readme unsupported )
 
+
+# SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
+norepeat="Yes"
+
 # -------- ADVANCED (HANDLE WITH CARE) --------
 
 # -------- BUTTON DETECTION --------
@@ -108,9 +112,6 @@ listenjoy="Yes"
 ttydevice="/dev/ttyUSB0"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
-
-# SAM will play every game on your system once before starting from the beginning
-norepeat="Yes"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
