--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -48,6 +48,8 @@ ttyenable="No"
 # BGM settings
 # SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). It's best to set it up in the SAM menu (Select "Background Music Player")
 bgm="No"
+# Stop BGM when SAM stops
+bgmstop="Yes"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
