--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -46,7 +46,8 @@ ttyenable="No"
 
 # -------- BGM SETTINGS -------
 # BGM settings
-# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). It's best to set it up in the SAM menu (Select "Background Music Player")
+# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
+# It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
 bgm="No"
 # Stop BGM when SAM stops
 bgmstop="Yes"
