--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -50,7 +50,7 @@ ttyenable="No"
 # It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
 bgm="No"
 # Stop BGM when SAM stops
-bgmstop="Yes"
+bgmstop="No"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
