--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -45,8 +45,7 @@ roulettetimer="500"
 ttyenable="No"
 
 # -------- BGM SETTINGS -------
-# BGM settings
-# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
+# SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
 # It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
 bgm="No"
 # Stop BGM when SAM stops
