--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -41,7 +41,7 @@ roulettetimer="500"
 
 # -------- TTY2OLED SETTINGS -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
-# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+# "Yes" shows the text name of the game being played
 ttyenable="No"
 
 # -------- BGM SETTINGS -------
