--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -30,8 +30,8 @@ corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gb
 mute="No"
 
 # How do we exit SAM?
-# playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed.
-# playcurrentgame="Yes" - SAM will stay in the current game when exiting.
+# "No" - SAM will reboot to MiSTer Menu when a button is pushed.
+# "Yes" - SAM will stay in the current game when exiting.
 playcurrentgame="No" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
