--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -95,6 +95,9 @@ exclude=( readme unsupported )
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
 
+# Disables blacklists and some other checks for faster startups.
+fastmode="No"
+
 # -------- ADVANCED (HANDLE WITH CARE) --------
 
 # -------- BUTTON DETECTION --------
