--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -91,6 +91,8 @@ psxpathfilter=""
 
 exclude=( readme unsupported )
 
+# Alternative way of selecting cores. Based on how many games a system has.
+coreweight="0"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
