--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -16,7 +16,7 @@ samtimeout=60
 gametimer=180
 
 # Start SAM only from MiSTer main menu
-# If you change this to menuonly="No", SAM will always start after you put down the controller. 
+# If you change this to menuonly is set to "No", SAM will always start after you put down the controller. 
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
@@ -58,9 +58,9 @@ bgmstop="No"
 # arcadepathfilter="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 #
 # Or use just a partial match to only play games from a certain category. Can be part of the path or filename.
-#
-# arcadepathfilter="_Horizontal"
-# nespathfilter="(Japan)"
+# For example:
+# arcadepathfilter set to "_Horizontal"
+# nespathfilter set to "(Japan)"
 
 amigapathfilter=""
 arcadepathfilter=""
