--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -48,6 +48,8 @@ ttyenable="No"
 # SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
 # It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
 bgm="No"
+# Change bgmplay to no if songs play twice in BGM
+bgmplay="Yes"
 # Stop BGM when SAM stops
 bgmstop="No"
 
