--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -55,13 +55,9 @@ bgmstop="No"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
-# Example: 
-# arcadepathfilter set to "/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+# Partial match is all you need. Can be part of the path or filename.
 #
-# Or use just a partial match to only play games from a certain category. Can be part of the path or filename.
-# Example:
-# arcadepathfilter set to "_Horizontal"
-# nespathfilter set to "(Japan)"
+# nespathfilter="(Japan)"
 
 amigapathfilter=""
 arcadepathfilter=""
@@ -85,6 +81,10 @@ snespathfilter=""
 tgfx16pathfilter=""
 tgfx16cdpathfilter=""
 psxpathfilter=""
+
+# --------- ARCADE ORIENTATION ---------
+# Set Arcade orientation to "horizontal" "vertical" or leave empty
+arcadeorient=""
 
 # FOLDER AND FILE EXCLUSION
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
