--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -93,7 +93,7 @@ arcadeorient=""
 exclude=( readme unsupported )
 
 # Alternative way of selecting cores. Based on how many games a system has.
-coreweight="Yes"
+coreweight="No"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
