--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -32,6 +32,7 @@ mute="No"
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed.
 # "Yes" - SAM will stay in the current game when exiting.
+# Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
 playcurrentgame="No" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
