--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -117,6 +117,14 @@ listenjoy="Yes"
 
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
+# How long to show the core logo for in seconds
+ttycoresleep="10"
+# How many seconds until core logo is shown again (default is "gametimer / 3")
+ttycoreshow=""
+# How often to show the core logo (minimum 1)
+ttydisplayswitch="2"
+# Display scrolling text with bigger font
+ttybig="yes"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
