--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -121,7 +121,7 @@ ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttycoresleep="10"
 # How many seconds until core logo is shown again (default is "gametimer / 3")
 ttycoreshow=""
-# How often to show the core logo (minimum 1)
+# How often to show the core logo
 ttydisplayswitch="2"
 # Display scrolling text with bigger font
 ttybig="yes"
