--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -124,7 +124,7 @@ ttycoreshow=""
 # How often to show the core logo
 ttydisplayswitch="2"
 # Display scrolling text with bigger font
-ttybig="yes"
+ttybig="no"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
