--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -20,8 +20,8 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gameboy gbc gba genesis gamegear megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gameboy,gbc,gba,genesis,gamegear,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
 # Core - Mute the core only (allows scripts like BGM to play over the attract mode)
@@ -87,17 +87,17 @@ samindex="Yes"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
-atari2600path="/media/fat/Games/Atari7800"
+atari2600path="/media/fat/Games/Atari2600"
 atari5200path="/media/fat/Games/Atari5200"
 atari7800path="/media/fat/Games/Atari7800"
 atarilynxpath="/media/fat/Games/AtariLynx"
 c64path="/media/fat/Games/C64"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/games/Gameboy"
-gbcpath="/media/fat/games/Gameboy"
+gbcpath="/media/fat/games/GBC"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
-ggpath="/media/fat/games/SMS"
+ggpath="/media/fat/games/GameGear"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
@@ -119,11 +119,11 @@ atari7800pathextra=""
 atarilynxpathextra=""
 c64pathextra=""
 fdspathextra=""
-gbpathextra=""
+gameboypathextra=""
 gbcpathextra=""
 gbapathextra=""
 genesispathextra=""
-ggpathextra=""
+gamegearpathextra=""
 megacdpathextra=""
 neogeopathextra=""
 nespathextra=""
@@ -142,11 +142,11 @@ atari7800pathrbf="_Console"
 atarilynxpathrbf="_Console"
 c64pathrbf="_Computer"
 fdspathrbf="_Console"
-gbpathrbf="_Console"
+gameboypathrbf="_Console"
 gbcpathrbf="_Console"
 gbapathrbf="_Console"
 genesispathrbf="_Console"
-ggpathrbf="_Console"
+gamegearpathrbf="_Console"
 megacdpathrbf="_Console"
 neogeopathrbf="_Console"
 nespathrbf="_Console"
