--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -16,260 +16,124 @@ samtimeout=60
 gametimer=180
 
 # Start SAM only from MiSTer main menu
+# If you change this to menuonly is set to "No", SAM will always start after you put down the controller. 
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist="arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx
+corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
-# Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
-# Core - Mute the core only (allows scripts like BGM to play over the attract mode)
-# No - Don't mute anything
+# When SAM starts, mute global or core volume. Core volume can't be muted completely.
+# A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
+# Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as core. 
+# Please use "core" for BGM support or use the menu to configure BGM automatically
 mute="No"
 
-# What should happen when button is pushed?
-# "Yes" - SAM will relaunch the current game with sound
-# "No" - SAM will reboot to MiSTer Menu
-playcurrentgame="No"
+# How do we exit SAM?
+# "No" - SAM will reboot to MiSTer Menu when a button is pushed.
+# "Yes" - SAM will stay in the current game when exiting.
+# Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
+playcurrentgame="No" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
-#-------- EXCLUDE LISTS --------
-# One game per line
-# Trailing quote is required!
+# -------- TTY2OLED SETTINGS -------
+# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
+# "Yes" shows the text name of the game being played
+ttyenable="No"
 
-arcadeexclude="First Bad Game.mra
-Second Bad Game.mra
-Third Bad Game.mra"
+# -------- BGM SETTINGS -------
+# SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
+# It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
+bgm="No"
+# Change bgmplay to no if songs play twice in BGM
+bgmplay="Yes"
+# Stop BGM when SAM stops
+bgmstop="No"
 
-atari2600exclude="First Bad Game.a26
-Second Bad Game.a26
-Third Bad Game.a26"
+# --------- PATH FILTER ---------
+# If you would like to only play games from a subdirectory of your games folder, put it here
+# Partial match is all you need. Can be part of the path or filename.
+#
+# nespathfilter="(Japan)"
 
-atari5200exclude="First Bad Game.a52
-Second Bad Game.a52
-Third Bad Game.a52"
+amigapathfilter=""
+arcadepathfilter=""
+atari2600pathfilter=""
+atari5200pathfilter=""
+atari7800pathfilter=""
+atarilynxpathfilter=""
+c64pathfilter=""
+fdspathfilter=""
+gbpathfilter=""
+gbcpathfilter=""
+gbapathfilter=""
+genesispathfilter=""
+ggpathfilter=""
+megacdpathfilter=""
+neogeopathfilter=""
+nespathfilter=""
+s32xpathfilter=""
+smspathfilter=""
+snespathfilter=""
+tgfx16pathfilter=""
+tgfx16cdpathfilter=""
+psxpathfilter=""
 
-atari7800exclude="First Bad Game.a78
-Second Bad Game.a78
-Third Bad Game.a78"
-
-atarilynxexclude="First Bad Game.lnx
-Second Bad Game.lnx
-Third Bad Game.lnx"
-
-c64exclude="First Bad Game.crt
-Second Bad Game.crt
-Third Bad Game.crt"
-
-fdsexclude="First Bad Game.fds
-Second Bad Game.fds
-Third Bad Game.fds"
-
-gbaexclude="First Bad Game.gba
-Second Bad Game.gba
-Third Bad Game.gba"
-
-genesisexclude="First Bad Game.md
-Second Bad Game.md
-Third Bad Game.md"
-
-ggexclude="First Bad Game.gg
-Second Bad Game.gg
-Third Bad Game.gg"
-
-megacdexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
-
-neogeoexclude="First Bad Game.neo
-Second Bad Game.neo
-Third Bad Game.neo"
-
-nesexclude="First Bad Game.nes
-Second Bad Game.nes
-Third Bad Game.nes"
-
-s32xexclude="First Bad Game.32x
-Second Bad Game.32x
-Third Bad Game.32x"
-
-smsexclude="First Bad Game.sms
-Second Bad Game.sms
-Third Bad Game.sms"
-
-snesexclude="First Bad Game.sfc
-Second Bad Game.sfc
-Third Bad Game.sfc"
-
-tgfx16exclude="First Bad Game.pce
-Second Bad Game.pce
-Third Bad Game.pce"
-
-tgfx16cdexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
-
-psxexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
+# --------- ARCADE ORIENTATION ---------
+# Set Arcade orientation to "horizontal" "vertical" or leave empty
+arcadeorient=""
 
 # FOLDER AND FILE EXCLUSION
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( vgm readme hes-v3 unsupported sounds music palettes )
+exclude=( readme unsupported )
+
+# Alternative way of selecting cores. Based on how many games a system has.
+coreweight="No"
+
+# SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
+norepeat="Yes"
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
+
+# -------- BUTTON DETECTION --------
 # When you push a button or move the mouse, interrupt SAM
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, some BT controllers and SNAC devices
-
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# SAM creates game lists for each core this can be done all at once on your first startup
-# create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
-# create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
-# Future plans include adding options in the graphical menu to allow the user to create all of the gamelists
-# in case roms are added removed, renamed, etc. Including one specifically for the Arcade cores, so you can
-# update that list when new Arcade cores are added, without needing to regenerate the entire set
-# these will also be available from the commandline, by running "MiSTer_SAM_on.sh ArcadeList" or, something similar.
 
-create_all_gamelists="No"
-
-# This option control when game lists will be regenerated automatically on startup
-# Valid values are "Hour Day Week Always Never"
-# Always will regenerate every time you start SAM
-# Never will regenerate in a few hundred years :) So, not really never, but, close enough.
-# Those without a connection to the Internet, and without an RTC addon will likely want to set these to Never
-# and manually update.
-# The rest are self explanatory
-rebuild_freq="Week"
-# This option is multiplied against the option above, so, a 2 would mean every 2 Hours Days or Weeks
-# This is ignored for Always and Never, as you can only have 1 of those
-# Valid values are any number higher than 0
-regen_duration=4
-# These optios are exactly the same as above, but, since new Arcade cores are added all the time,
-# we assume you might want to update these more frequently
-rebuild_freq_arcade="Week"
-regen_duration_arcade=1
-
-
-# -------- GAME PATHS --------
-# Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
-# Uses the default rom locations that MiSTer and all cores use by default
-# This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
-usedefaultpaths="Yes"
-
-# Default - all arcade games
-arcadepath="/media/fat/_Arcade"
-atari2600path="/media/fat/Games/Atari7800"
-atari5200path="/media/fat/Games/Atari5200"
-atari7800path="/media/fat/Games/Atari7800"
-atarilynxpath="/media/fat/Games/AtariLynx"
-c64path="/media/fat/Games/C64"
-fdspath="/media/fat/games/NES"
-gbpath="/media/fat/games/Gameboy"
-gbcpath="/media/fat/games/Gameboy"
-gbapath="/media/fat/games/GBA"
-genesispath="/media/fat/games/Genesis"
-ggpath="/media/fat/games/SMS"
-megacdpath="/media/fat/games/MegaCD"
-neogeopath="/media/fat/games/NeoGeo"
-nespath="/media/fat/games/NES"
-s32xpath="/media/fat/games/S32X"
-smspath="/media/fat/games/SMS"
-snespath="/media/fat/games/SNES"
-tgfx16path="/media/fat/games/TGFX16"
-tgfx16cdpath="/media/fat/games/TGFX16-CD"
-psxpath="/media/fat/games/PSX"
-
-#-------- CORE PATHS EXTRA --------
-# Path must begin with /
-# Uncomment below to use only rotated games
-# arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
-arcadepathextra=""
-atari2600pathextra=""
-atari5200pathextra=""
-atari7800pathextra=""
-atarilynxpathextra=""
-c64pathextra=""
-fdspathextra=""
-gbpathextra=""
-gbcpathextra=""
-gbapathextra=""
-genesispathextra=""
-ggpathextra=""
-megacdpathextra=""
-neogeopathextra=""
-nespathextra=""
-s32xpathextra=""
-smspathextra=""
-snespathextra=""
-tgfx16pathextra=""
-tgfx16cdpathextra=""
-psxpathextra=""
-
-#-------- CORE PATHS RBF --------
-arcadepathrbf="_Arcade"
-atari2600pathrbf="_Console"
-atari5200pathrbf="_Console"
-atari7800pathrbf="_Console"
-atarilynxpathrbf="_Console"
-c64pathrbf="_Computer"
-fdspathrbf="_Console"
-gbpathrbf="_Console"
-gbcpathrbf="_Console"
-gbapathrbf="_Console"
-genesispathrbf="_Console"
-ggpathrbf="_Console"
-megacdpathrbf="_Console"
-neogeopathrbf="_Console"
-nespathrbf="_Console"
-s32xpathrbf="_Console"
-smspathrbf="_Console"
-snespathrbf="_Console"
-tgfx16pathrbf="_Console"
-tgfx16cdpathrbf="_Console"
-psxpathrbf="_Console"
-
-# -------- NeoGeo Full Titles -------
-# Options are English and JAPANESE
-# Not all games have an alternate Japanese Name, in that case, The English Title is used
-neogeoregion="English"
-useneogeotitles="Yes"
-
-# -------- TTY2OLED -------
-# Options for https://github.com/venice1200/MiSTer_tty2oled
-# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+# -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
-ttyenable="No"
+
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
-ttyuseack="Yes"
-
-# SAM will play every game on your system once before starting from the beginning
-norepeat="Yes"
+# How long to show the core logo for in seconds
+ttycoresleep="10"
+# How many seconds until core logo is shown again (default is "gametimer / 3")
+ttycoreshow=""
+# How often to show the core logo
+ttydisplayswitch="2"
+# Display scrolling text with bigger font
+ttybig="no"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
 
-# Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
-usezip="Yes"
-
-# Show variables
 samtrace="No"
-
+samdebug="No"
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="test"
+branch="main"
