--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -33,7 +33,7 @@ mute="No"
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed.
 # "Yes" - SAM will stay in the current game when exiting.
 # Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
-playcurrentgame="No" 
+playcurrentgame="Yes" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
