--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -52,7 +52,7 @@ bgm="No"
 # Change bgmplay to no if songs play twice in BGM
 bgmplay="Yes"
 # Stop BGM when SAM stops
-bgmstop="No"
+bgmstop="Yes"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
