--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -91,7 +91,7 @@ arcadeorient=""
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( readme unsupported )
+exclude=( readme unsupported bios )
 
 # Alternative way of selecting cores. Based on how many games a system has.
 coreweight="No"
