--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -35,6 +35,11 @@ mute="No"
 # Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
 playcurrentgame="Yes" 
 
+# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
+# Please update SAM after enabling this to download the ESRB game whitelists
+# Some cores like MegaCD will probably need to be disabled since there are only 8 games with this label
+kids_safe="no"
+
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
