--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -37,7 +37,7 @@ playcurrentgame="Yes"
 
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
 # Please update SAM after enabling this to download the ESRB game whitelists
-# Some cores like MegaCD will probably need to be disabled since there are only 8 games with this label
+# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
 kids_safe="no"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
