--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -100,10 +100,11 @@ bgm="No"
 bgmplay="Yes"
 # Stop BGM when SAM stops
 bgmstop="Yes"
-# BGM playback tends to be louder than most cores. Let's adjust global volume down by two notches to compensate. 
+# BGM playback tends to be louder than most cores. We can adjust bgm's volume here (value 1-7) 
 # Once you play a game, global volume will be back to it's original level
 # Note - bgmstop must be set to yes since bgm also does it's own volume management
-gvoladjust="2"
+# Note - THIS CAUSES WRITES TO THE SD CARD SO BY DEFAULT IT'S DISABLED
+gvoladjust="0"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
