--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -103,7 +103,7 @@ bgmstop="Yes"
 # BGM playback tends to be louder than most cores. We can adjust bgm's volume here (value 1-7) 
 # Once you play a game, global volume will be back to it's original level
 # Note - bgmstop must be set to yes since bgm also does it's own volume management
-# Note - THIS CAUSES WRITES TO THE SD CARD SO BY DEFAULT IT'S DISABLED
+# NOTE - This feature will write to the SD card on start and stop of SAM so by default it's off
 gvoladjust="0"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
