Update and rename update_updateall_branch.yml to main-updateall_branch.yml

--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Commit files
       run: |
         git config --local user.name "mrchrisster"
+        git checkout -b updateall
         git push -u origin updateall
         git commit -m "Updating files for update all"
     - name: Push changes # push the output folder to your repo
