--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -22,7 +22,7 @@ jobs:
         mkdir Scripts
         rsync -av . Scripts --exclude Scripts --exclude .git --exclude .github --remove-source-files
         git checkout -b updateall
-        git push -u origin updateall
+        git push -u origin updateall --allow-unrelated-histories
         git commit -m "Updating files for update all"
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
