--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -15,12 +15,9 @@ jobs:
       with:
         ref: main
 
-    - name: Create temporary branch
-      run: |
-        git checkout -b temp
-
     - name: Copy Files to Scripts subfolder
       run: |
+        rm -rf updateall/Scripts
         mkdir -p updateall/Scripts
         cp -r * updateall/Scripts/
 
@@ -40,4 +37,5 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@main
       with:
+        force: true
         github_token: ${{ secrets.GITHUB_TOKEN }}
