--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: main
+        path: main
 
     - name: Copy Files to Scripts subfolder
       run: |
