--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -44,7 +44,7 @@ jobs:
         git commit -m "Copy Files from main"
 
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: actions/git-client@v2
       with:
         args: push origin updateall
         ref: updateall
