--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -47,6 +47,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        ref: updateall
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        branch: updateall
