--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Copy Files to Scripts subfolder
       run: |
         mkdir -p Scripts
-        cp -r main Scripts
+        cp -r main/. Scripts
 
     - name: Commit changes
       run: |
