--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -48,3 +48,9 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: updateall
+        
+      
+    - name: Invoke db build
+      uses: benc-uk/workflow-dispatch@v1
+      with:
+        workflow: Build Custom Database 
