--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -53,4 +53,5 @@ jobs:
     - name: Invoke db build
       uses: benc-uk/workflow-dispatch@v1
       with:
-        workflow: Build Custom Database 
+        workflow: Build Custom Database   
+        branch: updateall
