--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -48,4 +48,19 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: updateall
+        
+  build_db:
+    runs-on: ubuntu-22.04        
+    steps:
+    - name: Install apt-get utilities
+      run: sudo apt-get install detox sharutils
+
+    - uses: actions/checkout@v2
+      with:
+        ref: updateall
+
+    - name: Build Custom Database for MiSTer Downloader
+      run: set -o pipefail && curl --fail --location https://raw.githubusercontent.com/theypsilon/Downloader_DB-Template_MiSTer/main/.github/build_db.py | python3 -
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
