--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         mkdir -p Scripts
         rsync -av --exclude ".git" --exclude ".github" --exclude "tools-extras" --exclude "README.md" --exclude "Media" main/ Scripts/
+        rm -rf main
 
     - name: Commit changes
       run: |
