--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -33,7 +33,7 @@ mute="No"
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed.
 # "Yes" - SAM will stay in the current game when exiting.
 # Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
-playcurrentgame="Yes" 
+playcurrentgame="No" 
 
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
 # Please update SAM after enabling this to download the ESRB game whitelists
