--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -30,9 +30,9 @@ corelist="amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,
 mute="No"
 
 # How do we exit SAM?
-# "No" - SAM will reboot to MiSTer Menu when a button is pushed.
+# "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
+# NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. Set this up in SAM's menu under "Configure Exit behavior"
 # "Yes" - SAM will stay in the current game when exiting.
-# Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
 playcurrentgame="No" 
 
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
