--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -45,6 +45,9 @@ kids_safe="no"
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
+# The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
+amigaselect="All"
+
 # Alternative way of selecting cores. Based on how many games a system has.
 coreweight="No"
 
