--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -138,6 +138,8 @@ ttycoreshow=""
 ttydisplayswitch="2"
 # Display scrolling text with bigger font
 ttybig="no"
+# A lot of games have info in brackets. This will remove brackets from tty2oled output
+ttyname_cleanup="no"
 
 # -------- DEBUG --------
 samdebug="No"
