--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -5,6 +5,8 @@
 # The script supports zipped Everdrive packs or unzipped folders.
 # For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
+# !!! Some settings will need a reboot to take effect !!!
+
 # -------- GENERAL OPTIONS --------
 
 # Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up.
