--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -60,6 +60,7 @@ arcadeorient=""
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
 # Partial match is all you need. Can be part of the path or filename.
+# Please reboot for path filter to take effect.
 #
 # nespathfilter="(Japan)"
 
