--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -146,6 +146,8 @@ ttyname_cleanup="no"
 
 # -------- DEBUG --------
 samdebug="No"
+# Write debug message to file at /tmp/samdebug.log
+samdebuglog="No"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
