--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -139,10 +139,12 @@ ttycoresleep="10"
 ttycoreshow=""
 # How often to show the core logo
 ttydisplayswitch="2"
-# Display scrolling text with bigger font
+# Display scrolling text with bigger font, omit system info 
 ttybig="no"
 # A lot of games have info in brackets. This will remove brackets from tty2oled output
 ttyname_cleanup="no"
+# How fast the scrolling speed should be. Options are slower, normal or faster
+ttyscroll_speed="faster"
 
 # -------- DEBUG --------
 samdebug="No"
