--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -144,7 +144,7 @@ ttybig="no"
 # A lot of games have info in brackets. This will remove brackets from tty2oled output
 ttyname_cleanup="no"
 # How fast the scrolling speed should be. Options are slower, normal or faster
-ttyscroll_speed="faster"
+ttyscroll_speed="normal"
 
 # -------- DEBUG --------
 samdebug="No"
