--- a/.github/workflows/main-updateall_branch.yml
+++ b/.github/workflows/main-updateall_branch.yml
@@ -67,3 +67,4 @@ jobs:
       run: set -o pipefail && curl --fail --location https://raw.githubusercontent.com/theypsilon/Downloader_DB-Template_MiSTer/main/.github/build_db.py | python3 -
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DB_ID: MiSTer_SAM_files
