--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -5,6 +5,8 @@
 # The script supports zipped Everdrive packs or unzipped folders.
 # For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
+# !!! Some settings will need a reboot to take effect !!!
+
 # -------- GENERAL OPTIONS --------
 
 # Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up.
@@ -20,43 +22,45 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx
-corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: amiga,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx
+corelist="amiga,arcade,fds,genesis,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as core. 
 # Please use "core" for BGM support or use the menu to configure BGM automatically
-mute="No"
+mute="Core"
 
 # How do we exit SAM?
-# "No" - SAM will reboot to MiSTer Menu when a button is pushed.
+# "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
+# NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. Set this up in SAM's menu under "Configure Exit behavior"
 # "Yes" - SAM will stay in the current game when exiting.
-# Alternatively just set up your controller in SAM menu -> Settings to map start button to play current game. Pushing any other button will return you to MiSTer Menu.
 playcurrentgame="No" 
+
+# Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
+# Please update SAM after enabling this to download the ESRB game whitelists
+# Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
+kids_safe="Yes"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
-# -------- TTY2OLED SETTINGS -------
-# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
-# "Yes" shows the text name of the game being played
-ttyenable="No"
+# The Amigavision image contains demos and games. Here you can select what Amiga content you want SAM to show. Options are "Demos", "Games" or "All"
+amigaselect="All"
 
-# -------- BGM SETTINGS -------
-# SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
-# It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
-bgm="No"
-# Change bgmplay to no if songs play twice in BGM
-bgmplay="Yes"
-# Stop BGM when SAM stops
-bgmstop="No"
+# Alternative way of selecting cores. Based on how many games a system has.
+coreweight="Yes"
+
+# --------- ARCADE ORIENTATION ---------
+# Set Arcade orientation to "horizontal" "vertical" or leave empty
+arcadeorient=""
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
 # Partial match is all you need. Can be part of the path or filename.
+# Please reboot for path filter to take effect.
 #
 # nespathfilter="(Japan)"
 
@@ -83,18 +87,35 @@ tgfx16pathfilter=""
 tgfx16cdpathfilter=""
 psxpathfilter=""
 
-# --------- ARCADE ORIENTATION ---------
-# Set Arcade orientation to "horizontal" "vertical" or leave empty
-arcadeorient=""
-
 # FOLDER AND FILE EXCLUSION
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( readme unsupported )
+exclude=( readme unsupported bios )
 
-# Alternative way of selecting cores. Based on how many games a system has.
-coreweight="No"
+# -------- SAMVIDEO SETTINGS -------
+samvideo="Yes"
+# Options are alternate, core or only - alternate with every core played, play video like another core or only play videos
+samvideo_freq="Only"
+
+# -------- TTY2OLED SETTINGS -------
+# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
+# "Yes" shows the text name of the game being played
+ttyenable="Yes"
+
+# -------- BGM SETTINGS -------
+# SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
+# It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
+bgm="Yes"
+# Change bgmplay to no if songs play twice in BGM
+bgmplay="Yes"
+# Stop BGM when SAM stops
+bgmstop="Yes"
+# BGM playback tends to be louder than most cores. We can adjust bgm's volume here (value 1-7) 
+# Once you play a game, global volume will be back to it's original level
+# Note - bgmstop must be set to yes since bgm also does it's own volume management
+# NOTE - This feature will write to the SD card on start and stop of SAM so by default it's off
+gvoladjust="0"
 
 # SAM will play every game on your system once before starting from the beginning. Change this to disable SAM's no repeat feature.
 norepeat="Yes"
@@ -123,16 +144,17 @@ ttycoresleep="10"
 ttycoreshow=""
 # How often to show the core logo
 ttydisplayswitch="2"
-# Display scrolling text with bigger font
+# Display scrolling text with bigger font, omit system info 
 ttybig="no"
+# A lot of games have info in brackets. This will remove brackets from tty2oled output
+ttyname_cleanup="no"
+# How fast the scrolling speed should be. Options are slower, normal or faster
+ttyscroll_speed="normal"
 
 # -------- DEBUG --------
-# These are intended for debugging SAM - use with care!
-
-samtrace="No"
-samdebug="No"
-# Should SAM be quiet - disable for extra logging - only useful via ssh
-samquiet="Yes"
+samdebug="Yes"
+# Write debug message to file at /tmp/samdebug.log
+samdebuglog="No"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
