--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -94,9 +94,14 @@ psxpathfilter=""
 exclude=( readme unsupported bios )
 
 # -------- SAMVIDEO SETTINGS -------
-samvideo="Yes"
+samvideo="yes"
+samvideo_output="hdmi"
 # Options are alternate, core or only - alternate with every core played, play video like another core or only play videos
 samvideo_freq="Only"
+#Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
+samvideo_source="youtube"
+samvideo_path="/media/fat/video"
+
 
 # -------- TTY2OLED SETTINGS -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
