--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -94,13 +94,20 @@ psxpathfilter=""
 exclude=( readme unsupported bios )
 
 # -------- SAMVIDEO SETTINGS -------
+# Play videos in SAM (eg old video game commercials)
 samvideo="yes"
+# Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="hdmi"
-# Options are alternate, core or only - alternate with every core played, play video like another core or only play videos
-samvideo_freq="Only"
+# Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
+samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
-samvideo_source="youtube"
+samvideo_source="archive"
+# Customize lists for youtube, archive or local playback
+# Due to the MiSTer CPU not being very powerful, recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
 samvideo_path="/media/fat/video"
+sv_archive_hdmilist="https://ia902700.us.archive.org/3/items/640x480_videogame_commercials/640x480_videogame_commercials_files.xml"
+sv_archive_crtlist="https://ia902700.us.archive.org/3/items/640x240_videogame_commercials/640x240_videogame_commercials_files.xml"
+sv_youtubelist="/media/fat/Scripts/.MiSTer_SAM/samvideo_list.txt"
 
 
 # -------- TTY2OLED SETTINGS -------
