--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -29,7 +29,7 @@ corelist="amiga,arcade,fds,genesis,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Global (Mute global volume) No (to always play game sounds) or Core (to mute cores individually). "Yes" can also be set which is the same as core. 
 # Please use "core" for BGM support or use the menu to configure BGM automatically
-mute="Core"
+mute="no"
 
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
@@ -118,7 +118,7 @@ ttyenable="Yes"
 # -------- BGM SETTINGS -------
 # SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
 # It's best practice to set up BGM through the SAM menu (Select "Background Music Player")
-bgm="Yes"
+bgm="no"
 # Change bgmplay to no if songs play twice in BGM
 bgmplay="Yes"
 # Stop BGM when SAM stops
