--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -113,7 +113,7 @@ sv_youtubelist="/media/fat/Scripts/.MiSTer_SAM/samvideo_list.txt"
 # -------- TTY2OLED SETTINGS -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
 # "Yes" shows the text name of the game being played
-ttyenable="Yes"
+ttyenable="no"
 
 # -------- BGM SETTINGS -------
 # SAM supports BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ). 
@@ -170,4 +170,4 @@ samdebuglog="No"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="main"
+branch="test"
